# ha-petsnowy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
custom_components/petsnowy/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  fan.py  manifest.json  number.py  oilclear.py  quality_scale.yaml  select.py  sensor.py  strings.json  switch.py
custom_components/petsnowy/translations/: en.json
docs/: hacs-setup.md
tests/: conftest.py
tests/unit/petsnowy/: test_config_flow.py  test_coordinator.py  test_entity_descriptions.py  test_init.py  test_oilclear.py
